syntax = "proto3";

package cron.api.server.cron.worker.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "cron.api.server.cron.worker.v1";
option java_outer_classname = "WorkerV1";

import "validate/validate.proto";

message GetWorkerGroupRequest {
   uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message GetWorkerGroupReply {
  uint32 id = 1;
  string name = 2;
  optional string description = 3;
  uint32 createdAt = 4;
  uint32 updatedAt = 5;
}

message ListWorkerGroupRequest {
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string name = 5;
}

message ListWorkerGroupReply {
  message WorkerGroup {
    uint32 id = 1;
    string name = 2;
    optional string description = 3;
    uint32 createdAt = 4;
    uint32 updatedAt = 5;
  }

  uint32 total = 1;
  repeated WorkerGroup list = 2;
}

message CreateWorkerGroupRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  optional string description = 2;
}

message CreateWorkerGroupReply {
  uint32 id = 1;
}

message UpdateWorkerGroupRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string name = 2[(validate.rules).string = {min_len: 1}];
  optional string description = 3;
}

message UpdateWorkerGroupReply {
}

message DeleteWorkerGroupRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte:0}];
}

message DeleteWorkerGroupReply {
}

